# inara-crest-technologies

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  tatus --ignored
backend/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  schema.yml
backend/apps/: README.md
backend/apps/accounts/: admin.py  forms.py  managers.py  signals.py
backend/apps/accounts/api/: urls.py
backend/apps/accounts/api/serializers/: __init__.py  auth.py  registration.py  user.py
backend/apps/accounts/api/views/: __init__.py  auth.py  registration.py
backend/apps/accounts/authorization/: matrix.py  registry.py
backend/apps/accounts/management/commands/: seed_roles.py  sync_permissions.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_authorizationpermission.py  0003_user_is_email_verified_emailverificationtoken.py  0004_alter_emailverificationtoken_options.py
backend/apps/accounts/models/: __init__.py  authorization.py  email_verification.py  profile.py  user.py
backend/apps/accounts/permissions/: __init__.py  base.py  registry.py
backend/apps/accounts/services/: __init__.py  authentication.py  email.py  registration.py  verification.py
backend/apps/common/: constants.py  exceptions.py  pagination.py  permissions.py  responses.py  validators.py
backend/apps/domains/: admin.py  apps.py  permissions.py  registry.py
backend/apps/domains/api/: urls.py
backend/apps/domains/api/serializers/: __init__.py  search.py
backend/apps/domains/api/views/: __init__.py  health.py  search.py
backend/apps/domains/clients/: __init__.py  exceptions.py  namecheap.py
backend/apps/domains/dto/: __init__.py  availability.py  discovery.py
backend/apps/domains/enums/: __init__.py  pricing.py
backend/apps/domains/management/commands/: seed_tlds.py
backend/apps/domains/migrations/: 0001_initial.py  0002_tld_domain_tld.py  0003_alter_tld_options_tld_is_featured_and_more.py  0004_domainprice.py
backend/apps/domains/models/: __init__.py  domain.py  domain_price.py  registrar.py  tld.py
backend/apps/domains/providers/: __init__.py  base.py  factory.py  namecheap.py
backend/apps/domains/services/: __init__.py  domain_discovery.py  domain_search.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
backend/requirements/: base.txt
docs/: authorization_matrix.md
frontend/: package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/dev/static/chunks/: [next]_internal_font_google_inter_36eb3589_module_css_0w3-wzy._.single.css  [next]_internal_font_google_inter_36eb3589_module_css_0w3-wzy._.single.css.map  [root-of-the-server]__0q7awl7._.css  [root-of-the-server]__0q7awl7._.css.map  _0ak2clj._.js  _0ak2clj._.js.map  node_modules_0_ltkvg._.js  node_modules_0_ltkvg._.js.map  node_modules_@swc_helpers_cjs_0-4ujiy._.js.map  (+17 more)
frontend/.next/dev/types/: routes.d.ts  validator.ts
frontend/src/app/: layout.tsx
frontend/src/app/hosting/: page.tsx
frontend/src/app/internet/: page.tsx
frontend/src/app/support/: page.tsx
frontend/src/components/: Footer.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/hosting/: page.tsx
src/app/internet/: page.tsx
src/app/solutions/cloud-and-internet/: page.tsx
src/app/solutions/it-infrastructure-solutions/: page.tsx
src/app/solutions/managed-services/: page.tsx
src/app/solutions/office-home-and-technology-supply/: page.tsx
src/app/solutions/power-and-smart-facility-solutions/: page.tsx
src/app/solutions/research-data-and-analytical-services/: page.tsx
src/app/solutions/security-and-surveillance-systems/: page.tsx
src/app/solutions/software-and-digital-solutions/: page.tsx
src/app/support/: page.tsx
src/app/why-us/: page.tsx
src/components/: Footer.tsx  Navbar.tsx
(+67 files in other folders)
