[project]
name = "inara-crest-technologies"
version = "0.1.0"
description = "Backend for the Hosting Platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<6.0",
    "djangorestframework>=3.16",
    "django-environ>=0.12",
    "psycopg[binary]>=3.2",
    "pillow>=12.3.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "django-jazzmin>=3.0.5",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-django",
    "mypy",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py313"]

exclude = '''
/(
    migrations
  | .venv
  | staticfiles
  | media
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    "migrations",
    ".venv",
    "media",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"

python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.13"

ignore_missing_imports = true

warn_unused_configs = true

[tool.ruff.lint.per-file-ignores]
"config/settings/__init__.py" = ["F403"]
"config/settings/development.py" = ["F403"]
"config/settings/production.py" = ["F403"]
