[project]
name = "inara-crest-technologies"
version = "0.1.0"
description = "Backend for the Maven Host Platform."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "Django>=5.2,<6.0",
    "djangorestframework>=3.16",
    "django-environ>=0.12",
    "psycopg[binary]>=3.2",
    "pillow>=12.3.0",

    # Authentication
    "djangorestframework-simplejwt>=5.5.1",

    # API Documentation
    "drf-spectacular>=0.30.0",

    # Admin UI
    "django-jazzmin>=3.0.5",

    # External APIs
    "requests>=2.34.2",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "black>=25.1",
    "ruff>=0.12",

    "pytest>=8.4",
    "pytest-django>=4.11",
    "pytest-cov>=6.2",

    "coverage[toml]>=7.10",

    "mypy>=1.17",
    "django-stubs[compatible-mypy]>=5.2",

    "types-requests",

    "pre-commit>=4.3",

    "ipython>=9.4",
]

####################################################
# BLACK
####################################################

[tool.black]
line-length = 88
target-version = ["py313"]

exclude = '''
/(
    migrations
  | .venv
  | media
  | staticfiles
)/
'''

####################################################
# RUFF
####################################################

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    ".venv",
    "migrations",
    "media",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"config/settings/__init__.py" = ["F403", "F405"]
"config/settings/development.py" = ["F403", "F405"]
"config/settings/production.py" = ["F403", "F405"]

####################################################
# PYTEST
####################################################

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"

python_files = [
    "test_*.py",
    "*_test.py",
]

addopts = [
    "--reuse-db",
    "--cov=apps",
    "--cov=config",
    "--cov-report=term-missing",
]

####################################################
# COVERAGE
####################################################

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "manage.py",
]

####################################################
# MYPY
####################################################

[tool.mypy]
python_version = "3.13"

ignore_missing_imports = true

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "config.settings.development"